--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -67,7 +67,7 @@
                             android:id="@+id/adsToViewRemainingTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:text="15"
+                            android:text="6"
                             android:textColor="@color/black"
                             android:paddingHorizontal="8dp"
                             android:textSize="28sp"
@@ -84,7 +84,7 @@
                         android:layout_marginHorizontal="4dp"
                         android:enabled="true"
                         android:maxLines="1"
-                        android:text="@string/ad"
+                        android:text="@string/loading"
                         android:textColor="@color/black"
                         app:autoSizeTextType="uniform"
                         app:icon="@drawable/baseline_play_circle_24"
