--- a/app/src/main/res/layout/dialog_settings.xml
+++ b/app/src/main/res/layout/dialog_settings.xml
@@ -43,7 +43,7 @@
         app:boxStrokeColor="@color/black"
         app:endIconMode="clear_text"
         app:errorEnabled="true"
-        app:helperText="Enter the URL where SMS will be sent"
+        app:helperText="@string/enter_the_url_where_sms_will_be_sent"
         app:hintTextColor="@color/black">
 
         <com.google.android.material.textfield.TextInputEditText
